fixed card overflow

--- a/src/Components/CurriculumContent/index.css
+++ b/src/Components/CurriculumContent/index.css
@@ -7,6 +7,7 @@
 }
 
 .curriculum-content {
+    font-size: 16px; /* to use em on children for flexablity */
     margin-bottom: 60px;
 }
 
@@ -20,12 +21,11 @@
 .curriculum-content .my-card {
     gap: 30px;
     width: 100%;
-    height: 200px;
+    flex: 1 1 40%; /* 40% ? just works */
     display: flex;
-    padding: 20px;
+    padding: 1.5em;
     cursor: pointer;
     transition: 0.5s;
-    max-width: 536.5px;
     align-items: center;
     border-radius: 12px;
     background-color: var(--c-bgcolor);
@@ -38,7 +38,7 @@
 }
 
 .my-card svg {
-    font-size: 95px;
+    font-size: 6em;
     color: var(--c-color);
 }
 
@@ -48,7 +48,7 @@
 }
 
 .my-card h3{
-    font-size: 24px;
+    font-size: 1.5em;
     margin-bottom: 5px;
     line-height: 1.22em;
     color: var(--c-color);
@@ -56,7 +56,7 @@
 
 .my-card .badge {
     color: #fff;
-    font-size: 12px;
+    font-size: 0.75em;
     font-weight: 400;
     padding: 5px;
     margin-left: 15px;
@@ -70,7 +70,7 @@
 
 .my-card ul {
     list-style: none;
-    font-size: 16px;
+    font-size: 1em;
     font-weight: 400;
     color: var(--c-sec-color);
 }
@@ -82,7 +82,7 @@
 
 .my-card ul > li::after {
     content: '-';
-    font-size: 20px;
+    font-size: 1.25em;
     margin: 0 10px;
     color: var(--c-color);
 }
@@ -130,4 +130,10 @@
     font-size: 14px;
     font-weight: 400;
     color: #81899C;
+}
+
+@media only screen and (max-width: 578px) {
+    .curriculum-content {
+        font-size: 12px;
+    }
 }
